--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devesh Joshi Portfolio</title>
+    <title>Manjul Joshi Portfolio</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link
       rel="stylesheet"
@@ -40,7 +40,7 @@
             </li>
             <li class="nav_items">
               <a
-                href="./assets/img/Devesh.pdf"
+                href="#"
                 class="nav_link active"
                 download
                 >Resume</a
@@ -59,15 +59,15 @@
       <!-- HOME SECTION -->
       <section class="home bd_grid" id="home">
         <div class="home_data" data-aos="fade-down">
-          <img id="myImg" src="./assets/img/deveshjoshi101.jpg" alt="" />
+          <img id="myImg" src="#" alt="" />
           <h1 class="home_title">
-            Hi, <br />I'm <span class="home_title-color">Devesh Joshi</span
+            Hi, <br />I'm <span class="home_title-color">Manjul Joshi</span
             ><br />Full Stack Developer
           </h1>
 
           <a href="#contact" class="button"> Contact</a>
           <a
-            href="./assets/img/Devesh.pdf"
+            href="#"
             class="button"
             download
             >My Resume</a
@@ -86,7 +86,7 @@
             ><i class="bx bxl-leetcode"></i
           ></a> -->
           <a
-            href="https://www.linkedin.com/in/deveshjoshi101"
+            href="https://www.linkedin.com/in/manjul-j-4a9a8283/"
             target="_blank"
             class="home_social-icon"
             data-aos="fade-down"
@@ -94,7 +94,7 @@
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
-            href="https://github.com/deveshjoshi101"
+            href="https://github.com/Manjul-Joshi"
             target="_blank"
             class="home_social-icon"
             data-aos="fade-down"
@@ -1081,7 +1081,7 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Youtube-Clone"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
@@ -1102,12 +1102,12 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Spotify-Clone"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
               <a
-                href="https://deveshjoshi101.github.io/Spotify-Clone/"
+                href="#"
                 target="_blank"
                 >Go Live</a
               >
@@ -1123,12 +1123,12 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Coschedule_Clone"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
               <a
-                href="https://deveshjoshi101.github.io/Coschedule_Clone/"
+                href="#"
                 target="_blank"
                 >Go Live</a
               >
@@ -1145,7 +1145,7 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Bus_Reservation_System"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
@@ -1165,7 +1165,7 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Real_Estate_SpringBoot_Application"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
@@ -1186,7 +1186,7 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Human_Resource_Management_System"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
@@ -1207,7 +1207,7 @@
             </p>
             <div>
               <a
-                href="https://github.com/deveshjoshi101/Task_Planner"
+                href="#"
                 target="_blank"
                 >GitHub</a
               >
