--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="nav bd_grid">
         <div>
-          <a href="#" class="nav_logo">Devesh Joshi</a>
+          <a href="#" class="nav_logo">Manjul Joshi</a>
         </div>
 
         <div class="nav_menu" id="nav_menu">
