--- a/index.html
+++ b/index.html
@@ -1320,18 +1320,18 @@
 
       <section id="contact" data-aos="fade-down" data-aos-delay="250">
         <h1>Contact Information</h1>
-        <h4>Name : Devesh Joshi</h4>
-        <h4>Email : deveshjoshi101@gmail.com</h4>
-        <h4>Contact No. : +919818218929</h4>
+        <h4>Name : Manjul Joshi</h4>
+        <h4>Email : mj.manjul@gmail.com</h4>
+        <h4>Contact No. : +917351919763</h4>
       </section>
 
       <!-- Footer Section -->
       <footer class="footer">
-        <p class="footer_title" data-aos="fade-down">Devesh Joshi</p>
+        <p class="footer_title" data-aos="fade-down">Manjul Joshi</p>
 
         <div class="footer_socials">
           <a
-            href="https://www.linkedin.com/in/deveshjoshi101/"
+            href="https://www.linkedin.com/in/manjul-j-4a9a8283/"
             target="_blank"
             class="footer_icon"
             data-aos="fade-down"
@@ -1339,7 +1339,7 @@
             ><i class="bx bxl-linkedin"></i
           ></a>
           <a
-            href="https://github.com/deveshjoshi101"
+            href="https://github.com/Manjul-Joshi"
             target="_blank"
             class="footer_icon"
             data-aos="fade-down"
