--- a/index.html
+++ b/index.html
@@ -696,11 +696,11 @@
               data-aos="fade-down"
               data-aos-delay="350"
             >
-              I'm Devesh Joshi
+              I'm Manjul Joshi
             </h2>
             <p class="about_text" data-aos="fade-down" data-aos-delay="450">
               A Full Stack Developer skilled in both front-end and back-end
-              development, expertise in Angular, React, Spring Boot, HTML, CSS, 
+              development, expertise in React, HTML, CSS, 
               JavaScript and Python and possess hands-on experience in building
               efficient web applications. A diverse skill set and
               problem-solving abilities makes a valuable asset to any
@@ -708,8 +708,8 @@
             </p>
             <br />
             <h2>Education</h2>
-            <p>Graphic Era (Deemed to be) University</p>
-            <p>M.Tech.(CSE)</p>
+            <p>Graphic Era Hill University</p>
+            <p>B.Tech.(CSE)</p>
             <br />
             <h2>Interests</h2>
             <p>Coding</p>
@@ -743,7 +743,7 @@
                 <span class="skill_name">HTML5</span>
               </div>
 
-              <div><span class="skill_percentage">80%</span></div>
+              <div><span class="skill_percentage">60%</span></div>
 
               <div class="skill_bar skill_html"></div>
             </div>
@@ -767,7 +767,7 @@
                 <span class="skill_name">JS</span>
               </div>
 
-              <div><span class="skill_percentage">80%</span></div>
+              <div><span class="skill_percentage">60%</span></div>
 
               <div class="skill_bar skill_js"></div>
             </div>
@@ -778,51 +778,21 @@
                 <span class="skill_name">Java</span>
               </div>
 
-              <div><span class="skill_percentage">70%</span></div>
+              <div><span class="skill_percentage">40%</span></div>
 
               <div class="skill_bar skill_java"></div>
             </div>
 
-            <div class="skills_data" data-aos="fade-right" data-aos-delay="250">
-              <div class="skills_name">
-                <i class="bx bxl-spring-boot skill_icon"></i>
-                <span class="skill_name">Spring Core</span>
-              </div>
 
-              <div><span class="skill_percentage">75%</span></div>
-
-              <div class="skill_bar skill_java"></div>
-            </div>
-
-            <div class="skills_data" data-aos="fade-right" data-aos-delay="250">
-              <div class="skills_name">
-                <i class="bx bxl-spring-boot skill_icon"></i>
-                <span class="skill_name">Spring Boot</span>
-              </div>
-
-              <div><span class="skill_percentage">75%</span></div>
-
-              <div class="skill_bar skill_java"></div>
-            </div>
             <div class="skills_data" data-aos="fade-right" data-aos-delay="250">
               <div class="skills_name">
                 <i class="bx bxl-mysql skill_icon"></i>
                 <span class="skill_name">My Sql</span>
               </div>
 
-              <div><span class="skill_percentage">60%</span></div>
+              <div><span class="skill_percentage">30%</span></div>
 
               <div class="skill_bar skill_css"></div>
-            </div>
-            <div class="skills_data" data-aos="fade-right" data-aos-delay="250">
-              <div class="skills_name">
-                <i class="bx bxl-hibernate skill_icon"></i>
-                <span class="skill_name">JPA / Hibernate</span>
-              </div>
-
-              <div><span class="skill_percentage">70%</span></div>
-
-              <div class="skill_bar skill_java"></div>
             </div>
             <!-- SKILLS UI/UX -->
             <div class="skills_data" data-aos="fade-right" data-aos-delay="250">
@@ -831,7 +801,7 @@
                 <span class="skill_name">Maven</span>
               </div>
 
-              <div><span class="skill_percentage">70%</span></div>
+              <div><span class="skill_percentage">30%</span></div>
 
               <div class="skill_bar skill_java"></div>
             </div>
@@ -1069,50 +1039,6 @@
           data-aos="fade-down"
           data-aos-delay="250"
         >
-          <div class="work_img workImg1">
-            <img
-              src="https://feeds.abplive.com/onecms/images/uploaded-images/2022/01/31/0dfe05d1f843d2705c096b93ccb80e54_original.jpg"
-              alt=""
-            />
-            <h3>Youtube Clone</h3>
-            <p>
-              A web application video player and a clone of youtube where user
-              can enjoy watching movie or listening songs and many more.
-            </p>
-            <div>
-              <a
-                href="#"
-                target="_blank"
-                >GitHub</a
-              >
-              <a
-                href="https://velvety-narwhal-7fc5cb.netlify.app/"
-                target="_blank"
-                >Go Live</a
-              >
-            </div>
-          </div>
-
-          <div class="work_img workImg2">
-            <img src="./assets/img/spotifyimg.avif" alt="" />
-            <h3>Spotify Clone</h3>
-            <p>
-              A web application audio player where user can enjoy listening to
-              his favourite music.
-            </p>
-            <div>
-              <a
-                href="#"
-                target="_blank"
-                >GitHub</a
-              >
-              <a
-                href="#"
-                target="_blank"
-                >Go Live</a
-              >
-            </div>
-          </div>
 
           <div class="work_img workImg4">
             <img src="./assets/img/coschedule.png" alt="" />
@@ -1198,40 +1124,20 @@
             </div>
           </div>
 
-          <div class="work_img workImg4">
-            <img src="./assets/img/task-management.jpg" alt="" />
-            <h3>Task Planner Management System</h3>
-            <p>
-              A Task Planner helps in ease for user to plan his tasks and
-              execute them accordingly.
-            </p>
-            <div>
-              <a
-                href="#"
-                target="_blank"
-                >GitHub</a
-              >
-              <!-- <a
-                href="https://velvety-narwhal-7fc5cb.netlify.app/"
-                target="_blank"
-                >Go Live</a
-              > -->
-            </div>
-          </div>
         </div>
       </section>
 
       <!-- Git Stats -->
-      <h1 id="github" data-aos="fade-down" data-aos-delay="250">
+      <!-- <h1 id="github" data-aos="fade-down" data-aos-delay="250">
         My GitHub Stats
       </h1>
       <img
-        src="./assets/img/Screenshot (37).png"
+        src="#"
         alt=""
         id="gitimg"
         data-aos="fade-down"
         data-aos-delay="250"
-      />
+      /> -->
 
       <!-- <script>
         fetch('https://api.github.com/users/YourGitHubUsername/repos')
