Made changes to Portfolio

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
             <li class="nav_items">
               <a
-                href="#"
+              href="./assets/img/Manjul.pdf"
                 class="nav_link active"
                 download
                 >Resume</a
@@ -67,7 +67,7 @@
 
           <a href="#contact" class="button"> Contact</a>
           <a
-            href="#"
+            href="./assets/img/Manjul.pdf"
             class="button"
             download
             >My Resume</a
