--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
             href="./assets/img/Manjul.pdf"
             class="button"
             download
-            >My Resume</a
-          >
+            >My Resume</a>
         </div>
 
         <div class="home_social">
@@ -1049,12 +1048,12 @@
             </p>
             <div>
               <a
-                href="#"
+                href="https://github.com/Manjul-Joshi/Co-Schedule-Clone"
                 target="_blank"
                 >GitHub</a
               >
               <a
-                href="#"
+                href="https://manjul-joshi.github.io/Co-Schedule-Clone/"
                 target="_blank"
                 >Go Live</a
               >
@@ -1071,7 +1070,7 @@
             </p>
             <div>
               <a
-                href="#"
+                href="https://github.com/Manjul-Joshi/Bus_Reservation_System"
                 target="_blank"
                 >GitHub</a
               >
@@ -1091,7 +1090,7 @@
             </p>
             <div>
               <a
-                href="#"
+                href="https://github.com/Manjul-Joshi/Real_Estate_SpringBoot_Application"
                 target="_blank"
                 >GitHub</a
               >
@@ -1112,7 +1111,7 @@
             </p>
             <div>
               <a
-                href="#"
+                href="https://github.com/Manjul-Joshi/Human_Resource_Management_System"
                 target="_blank"
                 >GitHub</a
               >
