--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img id="myImg" src="#" alt="" />
           <h1 class="home_title">
             Hi, <br />I'm <span class="home_title-color">Manjul Joshi</span
-            ><br />Full Stack Developer
+            ><br />Front End Developer
           </h1>
 
           <a href="#contact" class="button"> Contact</a>
